samples/_failures_safe/1761416501_6c3176_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55398885.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_55398885.c:163:14: error: expected ‘;’ at end of input
  163 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_55398885.c:163:9: error: expected declaration or statement at end of input
  163 |         token
      |         ^~~~~
./samples/SAFE/__tmp_55398885.c:163:9: error: expected declaration or statement at end of input
